--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -1,17 +1,14 @@
 ﻿<Window
   x:Class="LinkerPlayer.Windows.EqualizerWindow"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-  Title="Equalizer"
-  Width="500"
-  Height="351"
-  MinWidth="500"
-  MinHeight="250"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
+    Title="Equalizer"
+  Width="570"
+  Height="470"
   AllowsTransparency="True"
   Loaded="Window_Loaded"
   StateChanged="Window_StateChanged"
@@ -102,8 +99,9 @@
     <Grid.RowDefinitions>
       <RowDefinition Height="30" />
       <RowDefinition Height="50" />
+      <RowDefinition Height="30" />
       <RowDefinition />
-      <RowDefinition Height="20" />
+      <RowDefinition Height="30" />
       <RowDefinition Height="50" />
     </Grid.RowDefinitions>
 
@@ -126,7 +124,7 @@
         WindowChrome.IsHitTestVisibleInChrome="True">
 
         <Button
-          Name="CloseButton"
+          Name="CloseBox"
           Click="CloseButton_Click"
           MouseEnter="ButtonMouseEnter"
           MouseLeave="ButtonMouseLeave"
@@ -141,26 +139,30 @@
       </StackPanel>
     </Grid>
 
-    <Grid Grid.Row="1">
+    <Grid Grid.Row ="1" HorizontalAlignment="Left">
+      <userControls:ToggleSwitch
+      x:Name="EqSwitch"
+      Grid.Column="0"
+      Margin="18, 0, 0, 0"
+      HorizontalAlignment="Center"
+      IsOn= "true"/>
+    </Grid>
+    <!--{Binding IsOn}" /> -->
+
+<Grid Grid.Row="2">
       <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="130" />
+        <!--<ColumnDefinition Width="*" />-->
+        <ColumnDefinition Width="Auto" />
         <ColumnDefinition Width="*" />
       </Grid.ColumnDefinitions>
 
-      <userControls:ToggleSwitch
-        x:Name="EqSwitch"
-        Grid.Column="0"
-        Margin="18, 0, 0, 0"
-        HorizontalAlignment="Center"
-        IsOn="{Binding IsOn}"
-        BorderBrush="{DynamicResource ControlBorderBrush}" />
-
       <ComboBox
         Name="Profiles"
-        Grid.Column="1"
-        Width="120"
+        Grid.Column="0"
+        Width="220"
         Height="25"
+        Margin="18, 0, 0, 0"
+        HorizontalAlignment="Left"
         materialDesign:HintAssist.Hint="Default"
         Background="Transparent"
         BorderBrush="{DynamicResource ControlBorderBrush}"
@@ -170,38 +172,54 @@
         ToolTip="Profiles">
       </ComboBox>
 
-      <Grid x:Name="ControlButtons" Grid.Column="2">
+      <Grid x:Name="ControlButtons" Grid.Column="1">
         <Grid.ColumnDefinitions>
-          <ColumnDefinition Width="36" />
-          <ColumnDefinition Width="36" />
-          <ColumnDefinition Width="36" />
-          <ColumnDefinition Width="35" />
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
         <Button
           Name="SaveButton"
           Grid.Column="0"
+          Margin="10, 0"
           Click="SaveButton_Click"
-          ToolTip="Save">
-          <materialDesign:PackIcon Foreground="White" Kind="ContentSave" />
-        </Button>
+          Content="Save..."
+          ToolTip="Save new profile"          
+          FontSize="14"
+          FontWeight="Normal"
+          d:Foreground="White"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Style="{StaticResource LinkerRectangleButton}" />
 
         <Button
           Name="DeleteButton"
           Grid.Column="1"
+          Margin="0, 0"
           Click="DeleteButton_Click"
-          ToolTip="Delete">
-          <materialDesign:PackIcon
-            Foreground="IndianRed"
-            Kind="Plus"
-            RenderTransformOrigin=".5, .5">
-            <materialDesign:PackIcon.RenderTransform>
-              <RotateTransform Angle="45" />
-            </materialDesign:PackIcon.RenderTransform>
-          </materialDesign:PackIcon>
-        </Button>
+          Content="Delete..."
+          ToolTip="Delete profile"          
+          FontSize="14"
+          FontWeight="Normal"
+          d:Foreground="White"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Style="{StaticResource LinkerRectangleButton}" />
 
-        <Popup
+
+        <Button
+          Name="ResetButton"
+          Grid.Column="2"
+          Margin="10, 0"
+          Click="ResetButton_Click"
+          Content="Reset"
+          ToolTip="Reset bands to zero"          
+          FontSize="14"
+          FontWeight="Normal"
+          d:Foreground="White"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Style="{StaticResource LinkerRectangleButton}" />
+
+        <!--<Popup
           x:Name="RenamePopup"
           Width="150"
           HorizontalOffset="0"
@@ -218,17 +236,17 @@
               Foreground="#BDBDBD"
               KeyDown="RenamePopupTextBox_KeyDown" />
           </Border>
-        </Popup>
+        </Popup>-->
 
-        <Button
+        <!--<Button
           Name="RenameButton"
           Grid.Column="2"
           Click="RenameButton_Click"
           ToolTip="Change">
           <materialDesign:PackIcon Foreground="White" Kind="PencilOutline" />
-        </Button>
+        </Button>-->
 
-        <Popup
+        <!--<Popup
           x:Name="NamePopup"
           Width="150"
           HorizontalOffset="0"
@@ -245,20 +263,12 @@
               Foreground="#BDBDBD"
               KeyDown="NamePopupTextBox_KeyDown" />
           </Border>
-        </Popup>
+        </Popup>-->
 
-        <Button
-          Name="NameButton"
-          Grid.Column="3"
-          Background="Transparent"
-          Click="AddButton_Click"
-          ToolTip="Add">
-          <materialDesign:PackIcon Foreground="White" Kind="Plus" />
-        </Button>
       </Grid>
     </Grid>
 
-    <Grid Grid.Row="2">
+    <Grid Grid.Row="3">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Right" />
@@ -278,18 +288,10 @@
           <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBlock
-          Grid.Row="0"
-          VerticalAlignment="Top"
-          Text="12 dB" />
-        <TextBlock
-          Grid.Row="1"
-          VerticalAlignment="Center"
-          Text="0 dB" />
-        <TextBlock
-          Grid.Row="2"
-          VerticalAlignment="Bottom"
-          Text="-12 dB" />
+        <TextBlock Grid.Row="0" VerticalAlignment="Top" Text="12 dB" />
+        <TextBlock Grid.Row="1" VerticalAlignment="Center" Text="0 dB" />
+        <TextBlock Grid.Row="2" VerticalAlignment="Bottom" Text="-12 dB" />
+
       </Grid>
 
       <!--  EQ Sliders - Initialized in Window_Loaded  -->
@@ -297,7 +299,7 @@
 
     </Grid>
 
-    <Grid Grid.Row="3" Margin="30,0,30,0">
+    <Grid Grid.Row="4" Margin="30,0,30,0">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Center" />
@@ -305,7 +307,7 @@
         </Style>
       </Grid.Resources>
 
-      <Grid.ColumnDefinitions>
+      <!--<Grid.ColumnDefinitions>
         <ColumnDefinition Width="25" />
         <ColumnDefinition />
         <ColumnDefinition />
@@ -317,71 +319,73 @@
         <ColumnDefinition />
         <ColumnDefinition />
         <ColumnDefinition />
-      </Grid.ColumnDefinitions>
+      </Grid.ColumnDefinitions>-->
 
-      <TextBlock
-        Grid.Column="1"
-        HorizontalAlignment="Center"
-        Text="32" />
-      <TextBlock
-        Grid.Column="2"
-        HorizontalAlignment="Center"
-        Text="64" />
-      <TextBlock
-        Grid.Column="3"
-        HorizontalAlignment="Center"
-        Text="125" />
-      <TextBlock
-        Grid.Column="4"
-        HorizontalAlignment="Center"
-        Text="250" />
-      <TextBlock
-        Grid.Column="5"
-        HorizontalAlignment="Center"
-        Text="500" />
-      <TextBlock
-        Grid.Column="6"
-        HorizontalAlignment="Center"
-        Text="1K" />
-      <TextBlock
-        Grid.Column="7"
-        HorizontalAlignment="Center"
-        Text="2K" />
-      <TextBlock
-        Grid.Column="8"
-        HorizontalAlignment="Center"
-        Text="4K" />
-      <TextBlock
-        Grid.Column="9"
-        HorizontalAlignment="Center"
-        Text="8K" />
-      <TextBlock
-        Grid.Column="10"
-        HorizontalAlignment="Center"
-        Text="16K" />
+      <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,0">
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="32" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band0Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="64" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band1Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="125" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band2Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="250" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band3Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="500" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band4Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="1K" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band5Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="2K" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band6Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="4K" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band7Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="8K" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band8Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+        <StackPanel Margin="0,0,0,0" Width="45">
+          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="16K" />
+          <TextBlock HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band9Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        </StackPanel>
+      </StackPanel>
     </Grid>
 
     <Grid
-      Grid.Row="4"
+      Grid.Row="5"
       VerticalAlignment="Bottom"
       Background="{DynamicResource MainWindowGradientStartBrush}">
-      <Grid.ColumnDefinitions>
+      <!--<Grid.ColumnDefinitions>
         <ColumnDefinition Width="*" />
         <ColumnDefinition Width="120" />
         <ColumnDefinition Width="*" />
-      </Grid.ColumnDefinitions>
+      </Grid.ColumnDefinitions>-->
 
       <Button
-        Name="StartStopText"
-        Grid.Column="1"
-        Width="100"
-        Height="30"
-        Margin="0,7,0,7"
-        HorizontalAlignment="Center"
-        Click="StartStopButton_Click"
-        Content="Start"
-        FontSize="18"
+        Name="CloseButton"
+        MinWidth="80"
+        Height="28"
+        Margin="0,0,10,10"
+        HorizontalAlignment="Right"
+        Click="CloseButton_Click"
+        Content="Close"
+        FontSize="14"
         FontWeight="Normal"
+        d:Foreground="White"
         Foreground="{DynamicResource ControlForegroundBrush}"
         Style="{StaticResource LinkerRectangleButton}" />
 
@@ -403,42 +407,7 @@
           Text="Start" />
       </Button>-->
 
-      <Button
-        Name="ReloadButton"
-        Grid.Column="2"
-        Width="25"
-        Height="25"
-        HorizontalAlignment="Left"
-        Background="Transparent"
-        Click="ReloadButton_Click"
-        ToolTip="Reset bands">
-        <Button.Triggers>
-          <EventTrigger RoutedEvent="Button.Click">
-            <EventTrigger.Actions>
-              <BeginStoryboard>
-                <Storyboard>
-                  <DoubleAnimation
-                    Storyboard.TargetName="RotateAnim"
-                    Storyboard.TargetProperty="(RotateTransform.Angle)"
-                    From="0"
-                    To="360"
-                    Duration="0:0:1" />
-                </Storyboard>
-              </BeginStoryboard>
-            </EventTrigger.Actions>
-          </EventTrigger>
-        </Button.Triggers>
 
-        <Image
-          Width="15"
-          RenderOptions.BitmapScalingMode="HighQuality"
-          RenderTransformOrigin="0.5,0.5"
-          Source="/Images/reload.png">
-          <Image.RenderTransform>
-            <RotateTransform x:Name="RotateAnim" Angle="0" />
-          </Image.RenderTransform>
-        </Image>
-      </Button>
     </Grid>
   </Grid>
 </Window>
