--- a/LinkerPlayer/Styles/EqVerticalSlider.xaml
+++ b/LinkerPlayer/Styles/EqVerticalSlider.xaml
@@ -1,4 +1,6 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary 
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <Style x:Key="SliderIncreaseButton" TargetType="RepeatButton">
     <Setter Property="SnapsToDevicePixels" Value="true" />
@@ -13,7 +15,7 @@
             Width="12"
             Background="{DynamicResource ControlDisabledBrush}"
             BorderBrush="Transparent"
-            BorderThickness="4.5, 0">
+            BorderThickness="4.5,0">
             <ContentPresenter
               x:Name="contentPresenter"
               Margin="{TemplateBinding Padding}"
@@ -88,7 +90,7 @@
             x:Name="Ellipse"
             Width="12"
             Height="12"
-            Fill="Transparent" 
+            Fill="Transparent"
             Stroke="{DynamicResource PlayerControlButtonBorderBrush}" />
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
@@ -133,6 +135,27 @@
   </ControlTemplate>
 
   <Style x:Key="EqVerticalSlider" TargetType="Slider">
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Slider}">
+          <Border x:Name="border" SnapsToDevicePixels="true">
+            <ContentPresenter
+              x:Name="contentPresenter"
+              Margin="{TemplateBinding Padding}"
+              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+              Focusable="False"
+              RecognizesAccessKey="True"
+              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
+          </Border>
+          <!--<ControlTemplate.Triggers>
+            <Trigger Property="IsDefaulted" Value="true">
+              <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
+            </Trigger>
+          </ControlTemplate.Triggers>-->
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
     <Setter Property="Focusable" Value="False" />
     <Setter Property="SnapsToDevicePixels" Value="true" />
     <Setter Property="OverridesDefaultStyle" Value="true" />
