--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window
   x:Class="LinkerPlayer.Windows.EqualizerWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-    Title="Equalizer"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
+  Title="Equalizer"
   Width="570"
   Height="470"
   AllowsTransparency="True"
@@ -80,18 +80,18 @@
         <Setter Property="HorizontalAlignment" Value="Center" />
       </Style>
 
-      <Style BasedOn="{StaticResource LinkerCircleButton}" TargetType="Button">
+      <!--<Style BasedOn="{StaticResource LinkerCircleButton}" TargetType="Button">
         <Setter Property="Height" Value="30" />
         <Setter Property="Width" Value="30" />
         <Setter Property="Margin" Value="0,0,0,0" />
-      </Style>
+      </Style>-->
 
     </Grid.Resources>
 
     <Grid.Background>
       <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
         <GradientStop Color="{DynamicResource MainWindowGradientStartColor}" />
-        <GradientStop Offset=".1" Color="{DynamicResource MainWindowGradientStartColor}" />
+        <GradientStop Offset=".3" Color="{DynamicResource MainWindowGradientStartColor}" />
         <GradientStop Offset="1" Color="{DynamicResource MainWindowGradientEndColor}" />
       </LinearGradientBrush>
     </Grid.Background>
@@ -139,17 +139,16 @@
       </StackPanel>
     </Grid>
 
-    <Grid Grid.Row ="1" HorizontalAlignment="Left">
+    <Grid Grid.Row="1" HorizontalAlignment="Left">
       <userControls:ToggleSwitch
-      x:Name="EqSwitch"
-      Grid.Column="0"
-      Margin="18, 0, 0, 0"
-      HorizontalAlignment="Center"
-      IsOn= "true"/>
+        x:Name="EqSwitch"
+        Grid.Column="0"
+        Margin="20,0,0,0"
+        IsOn="true" />
     </Grid>
-    <!--{Binding IsOn}" /> -->
+    <!--  {Binding IsOn}" />  -->
 
-<Grid Grid.Row="2">
+    <Grid Grid.Row="2">
       <Grid.ColumnDefinitions>
         <!--<ColumnDefinition Width="*" />-->
         <ColumnDefinition Width="Auto" />
@@ -159,9 +158,9 @@
       <ComboBox
         Name="Profiles"
         Grid.Column="0"
-        Width="220"
+        Width="200"
         Height="25"
-        Margin="18, 0, 0, 0"
+        Margin="20,0,0,0"
         HorizontalAlignment="Left"
         materialDesign:HintAssist.Hint="Default"
         Background="Transparent"
@@ -169,8 +168,7 @@
         Foreground="Black"
         IsTextSearchEnabled="false"
         SelectionChanged="Profiles_SelectionChanged"
-        ToolTip="Profiles">
-      </ComboBox>
+        ToolTip="Profiles" />
 
       <Grid x:Name="ControlButtons" Grid.Column="1">
         <Grid.ColumnDefinitions>
@@ -182,42 +180,42 @@
         <Button
           Name="SaveButton"
           Grid.Column="0"
-          Margin="10, 0"
+          Margin="10,0, 5, 0"
+          d:Foreground="White"
           Click="SaveButton_Click"
           Content="Save..."
-          ToolTip="Save new profile"          
           FontSize="14"
           FontWeight="Normal"
-          d:Foreground="White"
           Foreground="{DynamicResource ControlForegroundBrush}"
-          Style="{StaticResource LinkerRectangleButton}" />
+          Style="{StaticResource LinkerRectangleButton}"
+          ToolTip="Save new profile" />
 
         <Button
           Name="DeleteButton"
           Grid.Column="1"
-          Margin="0, 0"
+          Margin="5,0, 5, 0"
+          d:Foreground="White"
           Click="DeleteButton_Click"
           Content="Delete..."
-          ToolTip="Delete profile"          
           FontSize="14"
           FontWeight="Normal"
-          d:Foreground="White"
           Foreground="{DynamicResource ControlForegroundBrush}"
-          Style="{StaticResource LinkerRectangleButton}" />
+          Style="{StaticResource LinkerRectangleButton}"
+          ToolTip="Delete profile" />
 
 
         <Button
           Name="ResetButton"
           Grid.Column="2"
-          Margin="10, 0"
+          Margin="5,0, 10, 0"
+          d:Foreground="White"
           Click="ResetButton_Click"
           Content="Reset"
-          ToolTip="Reset bands to zero"          
           FontSize="14"
           FontWeight="Normal"
-          d:Foreground="White"
           Foreground="{DynamicResource ControlForegroundBrush}"
-          Style="{StaticResource LinkerRectangleButton}" />
+          Style="{StaticResource LinkerRectangleButton}"
+          ToolTip="Reset bands to zero" />
 
         <!--<Popup
           x:Name="RenamePopup"
@@ -281,25 +279,46 @@
         <ColumnDefinition Width="35" />
       </Grid.ColumnDefinitions>
 
-      <Grid>
+      <Grid Margin="0,16,0,6">
         <Grid.RowDefinitions>
           <RowDefinition Height="20" />
           <RowDefinition Height="*" MinHeight="10" />
           <RowDefinition Height="20" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" VerticalAlignment="Top" Text="12 dB" />
-        <TextBlock Grid.Row="1" VerticalAlignment="Center" Text="0 dB" />
-        <TextBlock Grid.Row="2" VerticalAlignment="Bottom" Text="-12 dB" />
+        <TextBlock
+          Grid.Row="0"
+          VerticalAlignment="Top"
+          d:Foreground="white"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Text="12 dB" />
+        <TextBlock
+          Grid.Row="1"
+          VerticalAlignment="Center"
+          d:Foreground="white"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Text="0 dB" />
+        <TextBlock
+          Grid.Row="2"
+          VerticalAlignment="Bottom"
+          d:Foreground="white"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Text="-12 dB" />
 
       </Grid>
 
       <!--  EQ Sliders - Initialized in Window_Loaded  -->
-      <Grid Name="EqGrid" Grid.Column="1" Margin="0, 10, 0, 10"/>
+      <Grid
+        Name="EqGrid"
+        Grid.Column="1"
+        Margin="0,20,0,10"
+        HorizontalAlignment="Stretch" />
 
     </Grid>
 
-    <Grid Grid.Row="4" Margin="30,0,30,0">
+    <Grid
+      Grid.Row="4"
+      Margin="53,0,0,0">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Center" />
@@ -307,60 +326,159 @@
         </Style>
       </Grid.Resources>
 
-      <!--<Grid.ColumnDefinitions>
-        <ColumnDefinition Width="25" />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-        <ColumnDefinition />
-      </Grid.ColumnDefinitions>-->
-
-      <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,0">
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="32" />
-          <TextBlock Name="Band0Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band0Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+      <StackPanel
+        Margin="0,0,0,0"
+        HorizontalAlignment="Stretch"
+        Orientation="Horizontal">
+        <StackPanel Width="50" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="32" />
+          <TextBlock
+            Name="Band0Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band0Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="64" />
-          <TextBlock Name="Band1Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band1Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="46" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="64" />
+          <TextBlock
+            Name="Band1Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band1Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="125" />
-          <TextBlock Name="Band2Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band2Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="48" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="125" />
+          <TextBlock
+            Name="Band2Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band2Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="250" />
-          <TextBlock Name="Band3Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band3Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="49" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="250" />
+          <TextBlock
+            Name="Band3Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band3Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="500" />
-          <TextBlock Name="Band4Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band4Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="48" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="500" />
+          <TextBlock
+            Name="Band4Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band4Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="1K" />
-          <TextBlock Name="Band5Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band5Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="47" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="1K" />
+          <TextBlock
+            Name="Band5Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band5Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="2K" />
-          <TextBlock Name="Band6Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band6Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="49" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="2K" />
+          <TextBlock
+            Name="Band6Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band6Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="4K" />
-          <TextBlock Name="Band7Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band7Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="50" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="4K" />
+          <TextBlock
+            Name="Band7Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band7Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="8K" />
-          <TextBlock Name="Band8Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band8Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="48" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="8K" />
+          <TextBlock
+            Name="Band8Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band8Value}" />
         </StackPanel>
-        <StackPanel Margin="0,0,0,0" Width="45">
-          <TextBlock HorizontalAlignment="Center" d:Foreground="White" Text="16K" />
-          <TextBlock Name="Band9Label" HorizontalAlignment="Center" d:Text="0.0"  Text="{Binding Band9Label}" d:Foreground="White" Foreground="{DynamicResource Brush_Accent}"/>
+        <StackPanel Width="46" Margin="0,0,0,0">
+          <TextBlock
+            Margin="0,0,0,3"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="16K" />
+          <TextBlock
+            Name="Band9Label"
+            HorizontalAlignment="Center"
+            d:Foreground="White"
+            d:Text="0.0"
+            Foreground="{DynamicResource ControlForegroundBrush}"
+            Text="{Binding Band9Value}" />
         </StackPanel>
       </StackPanel>
     </Grid>
@@ -377,15 +495,15 @@
 
       <Button
         Name="CloseButton"
-        MinWidth="80"
         Height="28"
-        Margin="0,0,10,10"
+        MinWidth="80"
+        Margin="0,4,10,8"
         HorizontalAlignment="Right"
+        d:Foreground="White"
         Click="CloseButton_Click"
         Content="Close"
         FontSize="14"
         FontWeight="Normal"
-        d:Foreground="White"
         Foreground="{DynamicResource ControlForegroundBrush}"
         Style="{StaticResource LinkerRectangleButton}" />
 
