Fixed disable for LinkerRectangleButton. Finished Equalizer window layout - still need to break code out to viewmodel.

--- a/LinkerPlayer/Styles/RectangleButton.xaml
+++ b/LinkerPlayer/Styles/RectangleButton.xaml
@@ -1,33 +1,16 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-  <Style x:Key="LinkerRectangleButton.FocusVisualStyle">
-    <Setter Property="Control.Template">
-      <Setter.Value>
-        <ControlTemplate TargetType="{x:Type Control}">
-          <Rectangle
-            Margin="3"
-            SnapsToDevicePixels="True"
-            Stroke="white"
-            StrokeDashArray="2 2"
-            StrokeThickness="1"
-            UseLayoutRounding="True" />
-        </ControlTemplate>
-      </Setter.Value>
-    </Setter>
-  </Style>
-
-  <Style x:Key="LinkerRectangleButton" TargetType="{x:Type ButtonBase}">
+  <Style x:Key="LinkerRectangleButton" TargetType="{x:Type Button}">
     <Setter Property="Background" Value="Transparent" />
-    <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
+    <Setter Property="BorderBrush" Value="{DynamicResource ControlForegroundBrush}" />
     <Setter Property="BorderThickness" Value="14" />
-    <!--<Setter Property="FocusVisualStyle" Value="{StaticResource LinkerRectangleButton.FocusVisualStyle}" />-->
     <Setter Property="HorizontalContentAlignment" Value="Center" />
     <Setter Property="VerticalContentAlignment" Value="Center" />
     <Setter Property="Padding" Value="1" />
 
     <Setter Property="Template">
       <Setter.Value>
-        <ControlTemplate TargetType="{x:Type ButtonBase}">
+        <ControlTemplate TargetType="Button">
           <Grid>
             <Rectangle Fill="{TemplateBinding Background}" StrokeThickness="0" />
             <Rectangle
@@ -40,7 +23,7 @@
               Stroke="{TemplateBinding BorderBrush}"
               StrokeThickness="1" />
             <ContentPresenter
-              x:Name="IconContent"
+              x:Name="contentPresenter"
               Margin="{TemplateBinding Padding}"
               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
@@ -84,6 +67,7 @@
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
               <Setter TargetName="Rectangle" Property="Opacity" Value="0.3" />
+              <Setter TargetName="contentPresenter" Property="TextBlock.Foreground" Value="{DynamicResource ControlDisabledBrush}" />
             </Trigger>
           </ControlTemplate.Triggers>
         </ControlTemplate>
@@ -92,7 +76,7 @@
 
     <Style.Triggers>
       <Trigger Property="IsMouseOver" Value="True">
-        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentDarkBrush}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource ControlAccentLightBrush}" />
       </Trigger>
       <Trigger Property="IsMouseOver" Value="False">
         <Setter Property="BorderBrush" Value="{DynamicResource ControlBorderBrush}" />
@@ -101,7 +85,7 @@
 
   </Style>
 
-  <Style
+  <!--<Style
     x:Key="LinkerRectangleToggleButton"
     BasedOn="{StaticResource LinkerRectangleButton}"
     TargetType="{x:Type ToggleButton}">
@@ -113,6 +97,6 @@
         <Setter Property="Foreground" Value="Gray" />
       </Trigger>
     </Style.Triggers>
-  </Style>
+  </Style>-->
 
 </ResourceDictionary>
