--- a/LinkerPlayer/Styles/EqVerticalSlider.xaml
+++ b/LinkerPlayer/Styles/EqVerticalSlider.xaml
@@ -1,6 +1,4 @@
-﻿<ResourceDictionary 
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <Style x:Key="SliderIncreaseButton" TargetType="RepeatButton">
     <Setter Property="SnapsToDevicePixels" Value="true" />
@@ -26,7 +24,7 @@
           </Border>
           <ControlTemplate.Triggers>
             <Trigger Property="IsMouseOver" Value="true">
-              <Setter TargetName="increaseBorder" Property="Background" Value="{StaticResource ControlBorderLightBrush}" />
+              <Setter TargetName="increaseBorder" Property="Background" Value="{StaticResource ControlAccentLightBrush}" />
             </Trigger>
             <!--<Trigger Property="IsPressed" Value="true">
               <Setter TargetName="increaseBorder" Property="BorderBrush" Value="{StaticResource ControlBorderDarkBrush}" />
@@ -50,7 +48,7 @@
           <Border
             x:Name="decreaseBorder"
             Width="12"
-            Background="{DynamicResource ControlAccentDarkBrush}"
+            Background="{DynamicResource ControlAccentLightBrush}"
             BorderBrush="Transparent"
             BorderThickness="4.5,0"
             SnapsToDevicePixels="True">
