--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -61,12 +61,12 @@
         </Setter>
       </Style>
 
-      <Style TargetType="TextBlock">
-        <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
+      <!--<Style TargetType="TextBlock">
+        --><!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />--><!--
         <Setter Property="FontSize" Value="16" />
         <Setter Property="Foreground" Value="#FAFAFA" />
         <Setter Property="VerticalAlignment" Value="Center" />
-      </Style>
+      </Style>-->
 
       <Style TargetType="ComboBox">
         <!--<Setter Property="FontFamily" Value="/Fonts/#Montserrat" />-->
@@ -101,7 +101,7 @@
       <RowDefinition Height="50" />
       <RowDefinition Height="30" />
       <RowDefinition />
-      <RowDefinition Height="30" />
+      <RowDefinition Height="40" />
       <RowDefinition Height="50" />
     </Grid.RowDefinitions>
 
@@ -175,12 +175,44 @@
           <ColumnDefinition Width="*" />
           <ColumnDefinition Width="*" />
           <ColumnDefinition Width="*" />
+          <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+
+        <Popup
+          x:Name="NewPopup"
+          Width="150"
+          HorizontalOffset="0"
+          VerticalOffset="1"
+          Placement="Bottom"
+          PlacementTarget="{Binding ElementName=NewButton}"
+          StaysOpen="false">
+          <Border Padding="5" Background="{DynamicResource MainWindowGradientStartBrush}">
+            <TextBox
+              Name="NewPopupTextBox"
+              Foreground="#BDBDBD"
+              KeyDown="NewPopupTextBox_KeyDown" />
+          </Border>
+        </Popup>
+
+        <Button
+          Name="NewButton"
+          Grid.Column="0"
+          Height="25"
+          Margin="10,0,5,0"
+          d:Foreground="White"
+          Click="NewButton_Click"
+          Content="New..."
+          FontSize="14"
+          FontWeight="Normal"
+          Foreground="{DynamicResource ControlForegroundBrush}"
+          Style="{StaticResource LinkerRectangleButton}"
+          ToolTip="Save new profile" />
 
         <Button
           Name="SaveButton"
-          Grid.Column="0"
-          Margin="10,0, 5, 0"
+          Grid.Column="1"
+          Height="25"
+          Margin="10,0,5,0"
           d:Foreground="White"
           Click="SaveButton_Click"
           Content="Save..."
@@ -192,8 +224,9 @@
 
         <Button
           Name="DeleteButton"
-          Grid.Column="1"
-          Margin="5,0, 5, 0"
+          Grid.Column="2"
+          Height="25"
+          Margin="5,0,5,0"
           d:Foreground="White"
           Click="DeleteButton_Click"
           Content="Delete..."
@@ -206,8 +239,9 @@
 
         <Button
           Name="ResetButton"
-          Grid.Column="2"
-          Margin="5,0, 10, 0"
+          Grid.Column="3"
+          Height="25"
+          Margin="5,0,10,0"
           d:Foreground="White"
           Click="ResetButton_Click"
           Content="Reset"
@@ -266,7 +300,7 @@
       </Grid>
     </Grid>
 
-    <Grid Grid.Row="3">
+    <Grid Grid.Row="3" Margin="25, 0, 0, 0">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Right" />
@@ -316,9 +350,7 @@
 
     </Grid>
 
-    <Grid
-      Grid.Row="4"
-      Margin="53,0,0,0">
+    <Grid Grid.Row="4" Margin="53,0,0,0">
       <Grid.Resources>
         <Style BasedOn="{StaticResource TextBlockFontStyle}" TargetType="TextBlock">
           <Setter Property="HorizontalAlignment" Value="Center" />
@@ -327,10 +359,10 @@
       </Grid.Resources>
 
       <StackPanel
-        Margin="0,0,0,0"
+        Margin="26,0,0,0"
         HorizontalAlignment="Stretch"
         Orientation="Horizontal">
-        <StackPanel Width="50" Margin="0,0,0,0">
+        <StackPanel Width="47" Margin="0,0,0,0">
           <TextBlock
             Margin="0,0,0,3"
             HorizontalAlignment="Center"
@@ -375,7 +407,7 @@
             Foreground="{DynamicResource ControlForegroundBrush}"
             Text="{Binding Band2Value}" />
         </StackPanel>
-        <StackPanel Width="49" Margin="0,0,0,0">
+        <StackPanel Width="43" Margin="0,0,0,0">
           <TextBlock
             Margin="0,0,0,3"
             HorizontalAlignment="Center"
@@ -405,7 +437,7 @@
             Foreground="{DynamicResource ControlForegroundBrush}"
             Text="{Binding Band4Value}" />
         </StackPanel>
-        <StackPanel Width="47" Margin="0,0,0,0">
+        <StackPanel Width="42" Margin="0,0,0,0">
           <TextBlock
             Margin="0,0,0,3"
             HorizontalAlignment="Center"
@@ -435,7 +467,7 @@
             Foreground="{DynamicResource ControlForegroundBrush}"
             Text="{Binding Band6Value}" />
         </StackPanel>
-        <StackPanel Width="50" Margin="0,0,0,0">
+        <StackPanel Width="42" Margin="0,0,0,0">
           <TextBlock
             Margin="0,0,0,3"
             HorizontalAlignment="Center"
@@ -495,10 +527,11 @@
 
       <Button
         Name="CloseButton"
-        Height="28"
+        Height="25"
         MinWidth="80"
-        Margin="0,4,10,8"
+        Margin="0,10,10,10"
         HorizontalAlignment="Right"
+        VerticalAlignment="Center"
         d:Foreground="White"
         Click="CloseButton_Click"
         Content="Close"
