--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -86,6 +86,8 @@
           Name="TracksTable"
           Width="Auto"
           Height="Auto"
+          MaxWidth="3840"
+          MaxHeight="2160"
           Margin="1,0,0,0"
           HorizontalAlignment="Stretch"
           VerticalAlignment="Stretch"
@@ -101,7 +103,7 @@
           EnableRowVirtualization="True"
           GridLinesVisibility="None"
           IsReadOnly="True"
-          ItemsSource="{Binding Tracks}"
+          ItemsSource="{Binding Tracks, IsAsync=True}"
           Loaded="DataGrid_Loaded"
           RowHeaderWidth="0"
           ScrollViewer.CanContentScroll="True"
